<resources>
    <string name="app_name">Library</string>

    <!--Main navigation-->
    <string name="main_navigation_home">Home</string>
    <string name="main_navigation_favorites">Favorites</string>
    <string name="main_navigation_wishlist">Wishlist</string>

    <!--Add book-->
    <string name="add_book_toolbar_title">Add a new book</string>
    <string name="add_book_title_hint">Title</string>
    <string name="add_book_title_helper">Title of the book</string>
    <string name="add_book_author_hint">Author</string>
    <string name="add_book_author_helper">Author of the book</string>
    <string name="add_book_cover_hint">Cover link</string>
    <string name="add_book_cover_helper">Link to the cover of the book</string>
    <string name="add_book_save_button">Save</string>
    <string name="add_book_error_title">Title field cannot be empty!</string>
    <string name="add_book_error_author">Author field cannot be empty!</string>
    <string name="add_book_error_cover">Cover link field cannot be empty!</string>
    <string name="add_book_success">Book was added successfully!</string>

    <!--Home-->
    <string name="home_toolbar_title">Books</string>

    <!--Detail-->
    <string name="detail_remove_button">Remove</string>
    <string name="detail_update_button">Update</string>
    <string name="empty_state">Seems like there are no books in here :(</string>
    <string name="empty_state_suggestion"> Why don\'t you add a book by tapping the plus button?</string>
    <string name="work_in_progress">Work in progress…</string>

</resources>
